testsuite/tests/grammar/invalid_lexers/token_matcher.lkt
import common

lexer foo_lexer {
    Example <- /
}
